json 반환 방식 수정